src/objects/DevOps_Sales_Digital_Ilog__mdt.object
<CustomObject>
    <description>This used to identify if the organization will be running digital integration log</description>
    <fields>
        <fullName>Sales_Organization_Label__c</fullName>
        <label>Sales Organization Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Digital_ilogs_to_EPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Digital ilogs to EPI?</label>
        <type>Checkbox</type>
    </fields>
    <label>DevOps Sales Digital Ilog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Sales_Organization_Label__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Send_Digital_ilogs_to_EPI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>DevOps Sales Digital Ilogs</pluralLabel>
</CustomObject>